# MarkdownDiary

./: .gitignore  MarkdownDiary.py  pyproject.toml  readme.md
markdown_diary/: main.py
