[tool.poetry]
name = "markdown-diary"
version = "2.0.0"
description = ""
authors = ["skarfie123 <rahulpai@rocketmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
markdown-diary = "markdown_diary.main:cli"
mdd = "markdown_diary.main:cli"